--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           pip install mkdocs-material  # Optional theme
 
       - name: Build and Deploy MkDocs
-        run: mkdocs gh-deploy --force
+        run: mkdocs gh-deploy --force --remote-name origin
