--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,10 @@
-site_name: OBMS Documentation
-site_url: "https://docs.getobms.com"
+site_name: OBMS
+site_url: "https://getobms.com"
 repo_url: "https://github.com/OBMS-Open-Business-Management-Software/core"
 repo_name: OBMS Core
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/full.logo.svg
   favicon: assets/full.favicon.svg
   palette:
@@ -18,6 +19,9 @@ theme:
     - navigation.indexes
     - navigation.footer
     - navigation.path
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
     - content.code.copy
   experimental: true
 copyright: "© 2025 OBMS (Open Business Management Software). All rights reserved."
@@ -61,35 +65,35 @@ extra_javascript:
   - js/extra.js
 nav:
   - Home: index.md
-  - Getting Started:
-    - Prerequisites: getting-started/prerequisites.md
-    - Installation:
-      - Bare Metal: getting-started/installation/bare_metal.md
-      - Docker: getting-started/installation/docker.md
-      - Kubernetes: getting-started/installation/kubernetes.md
-    - Configuration: getting-started/configuration.md
-  - Modules: modules.md
-  - User Guide:
-    - Introduction: user_guide/intro.md
-  - Admin Guide:
-    - Introduction: admin_guide/intro.md
-    - User Management: admin_guide/user_management.md
-    - REST API: admin_guide/api.md
-    - OAUTH Server: admin_guide/oauth.md
-    - WebDAV Server: admin_guide/webdav.md
-  - Developer Guide:
-    - Introduction: developer_guide/intro.md
-    - Tooling: developer_guide/tooling.md
-    - Modules:
-      - Core: developer_guide/modules/core.md
-      - Products: developer_guide/modules/products.md
-      - Payment Gateways: developer_guide/modules/payment_gateways.md
-    - Contributing: developer_guide/contributing.md
-  - Licensing:
-    - Software License: misc/license.md
-    - Enterprise Agreement: misc/enterprise_agreement.md
-  - Changelog: misc/changelog.md
-  - Legal:
-    - Imprint: https://ipvx.io/rechtliches/impressum
-    - Privacy Policy: https://ipvx.io/rechtliches/datenschutzbestimmungen
+  - Documentation:
+    - About: docs/about.md
+    - Getting Started:
+      - Prerequisites: docs/getting-started/prerequisites.md
+      - Installation:
+        - Bare Metal: docs/getting-started/installation/bare_metal.md
+        - Docker: docs/getting-started/installation/docker.md
+        - Kubernetes: docs/getting-started/installation/kubernetes.md
+      - Configuration: docs/getting-started/configuration.md
+    - Modules: docs/modules.md
+    - User Guide:
+      - Introduction: docs/user_guide/intro.md
+    - Admin Guide:
+      - Introduction: docs/admin_guide/intro.md
+      - User Management: docs/admin_guide/user_management.md
+      - REST API: admin_guide/api.md
+      - OAUTH Server: docs/admin_guide/oauth.md
+      - WebDAV Server: docs/admin_guide/webdav.md
+    - Developer Guide:
+      - Introduction: docs/developer_guide/intro.md
+      - Tooling: docs/developer_guide/tooling.md
+      - Modules:
+        - Core: docs/developer_guide/modules/core.md
+        - Products: docs/developer_guide/modules/products.md
+        - Payment Gateways: docs/developer_guide/modules/payment_gateways.md
+      - Contributing: docs/developer_guide/contributing.md
+    - Licensing:
+      - Software License: docs/license.md
+      - Enterprise Agreement: docs/enterprise_agreement.md
+  - Download: https://github.com/OBMS-Open-Business-Management-Software/core/releases
+  - Changelog: docs/changelog.md
 
